--- a/css/style.css
+++ b/css/style.css
@@ -11,4 +11,116 @@
     .chartHeightHrvatskaWrap {
         height: 840px !important;
     }
+    .chartHeightSvijet {
+        height: 800px !important;
+    }
+    .chartHeightSvijetWrap {
+        height: 840px !important;
+    }
+}
+
+body {
+    padding: 0;
+    margin: 0;
+}
+
+.favicon {
+    margin: 0;
+    padding: 15px;
+    background: slategray;
+    font-family: Roboto;
+    font-size: 26px;
+    color: white;
+    text-align: center;
+    box-shadow: 0px 0px 10px #777;
+}
+
+.paddingtop20 {
+    padding-top: 20px;
+}
+
+.paddingbottom20 {
+    padding-bottom: 20px;
+}
+
+.flex-wrapper {
+    width: 80%;
+    display: inline-flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.flex-item {
+    flex: auto;
+    padding: 10px;
+    background: #515C65;
+    box-shadow: 0px 0px 5px #777;
+    font-family: Roboto;
+    font-size: 18px;
+    color: white;
+    text-align: center;
+}
+
+.chart-wrapper {
+    height: 640px;
+    width: 80%;
+    margin: auto;
+    background: #32373A;
+    box-shadow: 0px 0px 5px #777;
+}
+
+.chart-item {
+    height: 600px;
+    padding: 20px;
+}
+
+.p1 {
+    margin: 0;
+    padding: 10px;
+    font-size: 22px;
+}
+
+.active {
+    margin: 0;
+    padding: 4px;
+    color: #00E5FF;
+}
+
+.confirmed {
+    margin: 0;
+    padding: 4px;
+    color: #FFAB40;
+}
+
+.cured {
+    margin: 0;
+    padding: 4px;
+    color: #69F0AE;
+}
+
+.deceased {
+    margin: 0;
+    padding: 4px;
+    color: #FF5252;
+}
+
+.today {
+    color: white;
+    font-weight: bold;
+}
+
+.overall {
+    color: white;
+}
+
+#danasDatum {
+    margin: auto;
+    padding: 10px 0px;
+    width: 80%;
+    background: #515C65;
+    font-family: Roboto;
+    font-size: 22px;
+    color: white;
+    text-align: center;
+    box-shadow: 0px 0px 5px #777;
 }
